# gdfile

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
config/: .env.example
gdfile/: __init__.py  generate_sample.py  local.py  main.py
gdfile/generations/: __init__.py  admin.py  conftest.py  init_serializers.py  init_views.py  routers.py  rules.py  serializers.py  tests.py  views.py  views_this_rules.py
gdfile/helpers/: __init__.py  analysis_file_model.py  helper.py  preparation.py
gdfile/models/: answer.py  question.py  quiz.py  quiz_key.py  quiz_key_element.py  quiz_step.py  recommendation.py
gdfile/sample/: example_routers.py
src/gdfile/: __init__.py  __main__.py  main.py
src/gdfile/done/: admin.py
src/gdfile/done/api/: routers.py
src/gdfile/done/api/serializers/: __init__.py  attachment.py  bizone_file.py  comment.py  company.py  report.py  scope.py  stage_pass_history.py
src/gdfile/done/api/views/: __init__.py  attachment.py  bizone_file.py  comment.py  company.py  report.py  scope.py  stage_pass_history.py
src/gdfile/done/tests/: conftest.py
src/gdfile/done/tests/test_app/: test_api_attachment.py  test_api_bizone_file.py  test_api_comment.py  test_api_company.py  test_api_report.py  test_api_scope.py  test_api_stage_pass_history.py
src/gdfile/generations/: conftest.py
src/gdfile/helpers/: analysis_file_model.py
src/gdfile/sample/: example_routers.py  example_tests.py
