[tool.poetry]
name = "gdfile"
version = "0.1.0"
description = "Django app with generate file for django rest framework."
authors = ["Gleb Mazur <mazur.gleb2010@yandex.ru>"]
license = "MIT"
packages = [
    { include = 'gdfile' },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
poetry-core = "^1.0.8"
python-dotenv = "^0.20.0"

[build-system]
requires = [
  "python-dotenv>=0.20.0",
  "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gdfile = "gdfile.main:main"
