[metadata]
name = gdfile
version = 0.1
description = Django app with generate file for django rest framework.
long_description = file: README.md
url = https://github.com/BigBread57/generate_django_file
author = Gleb Mazur
author_email = amzur.gleb2010@yandex.ru
license = MIT
license_file = LICENSE
classifiers =
  Environment :: Web Environment
  Framework :: Django
  Framework :: Django :: 3.2
  Intended Audience :: Developers
  License :: Custom
  Operating System :: Linux
  Programming Language :: Python
  Programming Language :: Python 3
  Programming Language :: Python 3.9
keywords =
    gdfile

[options]
use_scm_version = True
python_requires = >=3.9
package_dir =
  = src
packages = find:
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
    gdfile = gdfile.main:main

[options.packages.find]
where = src
